# ValLib

./: .git-blame-ignore-revs  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  testing.yml
ValLib/: __init__.py  api.py  debug.py  exceptions.py  get_version.py  parsing.py  request.py  riot.py  storage.py  structs.py  version.py
ValLib/auth/: __init__.py  auth.py  captcha.py  context.py  helper.py  info.py  mfa.py  setup.py  token.py  validation.py
ValLib/auth/legacy/: __init__.py  login.py  mfa.py
ValLib/captcha/: __init__.py  alternative.py  exceptions.py  handler.py  http.py  port.py  struct.py  web.py
ValLib/captcha/assets/: captcha.html
ValLib/mfa/: __init__.py  alternative.py  default.py  struct.py
test/: test_auth.py
