[project]
name = "ValLib"
version = "1.0.5"
readme = "README.md"
authors = [{ name = "PWall" }]
license = {text = "GPL-3.0"}
keywords = ["valorant", "api", "auth"]
dependencies = [
    "requests",
    "jwt",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ValUtils/ValLib"

[tool.bumpver]
current_version = "1.0.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
