[project]
name = "ValLib"
version = "1.1.0"
readme = "README.md"
authors = [{ name = "PWall" }]
license = {text = "GPL-3.0"}
keywords = ["valorant", "api", "auth"]
dependencies = [
    "requests",
    "pyjwt",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ValUtils/ValLib"

[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore: version bump"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
